--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Hackfun",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "cool-ascii-faces": "^1.3.4",
+    "express": "^4.16.3",
+    "nodemon": "^1.18.4"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
