--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.16.3",
+    "node-dogstatsd": "0.0.7",
     "nodemon": "^1.18.4"
   },
   "devDependencies": {},
